--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Public/css/style.css">
+    <link rel="icon" href="/Public/contenido/img/Main/fondo.jpg">
+    <link rel="stylesheet" href="stylep.css">
     <title>Red Plus Pelis</title>
+    
 </head>
 <body>
-    
+    <header>
+        <button class="redireccion">
+            <a href="/views/P&S.html/peliculas.html">Peliculas</a>
+        </button>
+        <button class="redireccion">
+            <a href="/views/P&S.html/series.html">Series</a>
+        </button>
+    </header>
+    <iframe src="/views/P&S.html/peliculas.html"></iframe>
+    <iframe src="/views/P&S.html/series.html"></iframe>
 </body>
 </html>
