--- a/views/P&S.html/peliculas.html
+++ b/views/P&S.html/peliculas.html
@@ -4,14 +4,17 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>peliculas</title>
+        <title>Peliculas</title>
         <link rel="icon" href="/Public/contenido/img/Main/fondo.jpg">
         <link rel="stylesheet" href="/Public/css/style.css">
+
 </head>
 
 <body>
         <div class="cont">
+
                 <h1 class="Titulo">Peliculas</h1>
+
                 <div class="main-scroll-div">
 
                         <button class="iconob" onclick="scrolll()"><img class="iconoi"
@@ -21,48 +24,154 @@
                                 <div class="scroll-images">
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Peliculas/BadBoysForLife.jpg"
-                                                        alt="image"></div>
+                                                        alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                                </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Baywatch.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/Baywatch.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Encanto.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/Encanto.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Joker.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/Joker.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                                </div>
+                                        <div class="child"><img class="child-img"
+                                                src="/Public/contenido/img/Peliculas/PussInBoots-TheLastWish.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/PussInBoots-TheLastWish.jpg"
-                                                        alt="image"></div>
-                                        <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/RideAlong.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/RideAlong.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/RushHour3.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/RushHour3.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Shrek.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/Shrek.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Spiderman-AcrossTheSpiderverse.jpg"
-                                                        alt="image"></div>
-                                        <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Spiderman-IntoTheSpiderverse.jpg"
-                                                        alt="image"></div>
-                                        <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/Ted.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/Spiderman-AcrossTheSpiderverse.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/TheBoyInTheStripedPyjamas.jpg"
-                                                        alt="image"></div>
+                                                src="/Public/contenido/img/Peliculas/Spiderman-IntoTheSpiderverse.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                        </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/TheFaultInOurStars.jpg"
-                                                        alt="image"></div>
+                                                src="/Public/contenido/img/Peliculas/Ted.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                        </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/TheGambler.jpg"
-                                                        alt="image"></div>
+                                                src="/Public/contenido/img/Peliculas/TheBoyInTheStripedPyjamas.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                        </div>
                                         <div class="child"><img class="child-img"
-                                                        src="/Public/contenido/img/Peliculas/TheWhale.jpg" alt="image">
+                                                src="/Public/contenido/img/Peliculas/TheFaultInOurStars.jpg"
+                                                alt="image">
+                                                        alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                                </div>
+                                        <div class="child"><img class="child-img"
+                                                src="/Public/contenido/img/Peliculas/TheGambler.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button><p>Ver Trailer</p></button>
+                                                                <button><p>Reproducir </p></button>
+                                                        </figcaption>
+                                        </div>
+                                        <div class="child"><img class="child-img"
+                                                src="/Public/contenido/img/Peliculas/TheWhale.jpg"
+                                                alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
 
 
@@ -76,8 +185,9 @@
 
                 </div>
 
-
         </div>
+
+
 </body>
 <script src="/views/js/slider.js"></script>
 
