--- a/views/P&S.html/series.html
+++ b/views/P&S.html/series.html
@@ -24,48 +24,141 @@
                                 <div class="scroll-images">
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/AttackOnTitan.jpg"
-                                                        alt="image"></div>
+                                                        alt="image">
+                                                        <figcaption class="atras">
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                                </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/BlueBloods.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/CobraKai.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/CriminalMinds.jpg"
-                                                        alt="image"></div>
+                                                        alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                                </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/FamilyGuy.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/Futurama.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/GreysAnatomy.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/LawOrder.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/PeppaPig.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/RickMorty.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>hola piña</button>
+                                                                <button>hola piña22</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/TedLasso.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/TeenTitansGo.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/TheGoodDoctor.jpg"
-                                                        alt="image"></div>
+                                                        alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
+                                                </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/TheLoudHouse.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
                                         <div class="child"><img class="child-img"
                                                         src="/Public/contenido/img/Series/TheSimpsons.jpg" alt="image">
+                                                        <figcaption>
+                                                                <h3>HOLAAAAAA</h3>
+                                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptate?</p>
+                                                                <button>Ver Trailer</button>
+                                                                <button>Reproducir</button>
+                                                        </figcaption>
                                         </div>
 
 
