--- a/views/stylep.css
+++ b/views/stylep.css
@@ -10,9 +10,10 @@ header{
     margin-left: 10px;
 }
 button{
-    width: 900px;
-    height: 900px;
-    font-size: 100px;
+    width: 180px;
+    height: 89px;
+    font-size: 40px;
+    margin: 30px 0px;
 }
 
 iframe {
