fix: "Corrección de ortografía"

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <button class="redireccion">
-            <a href="/views/P&S.html/peliculas.html">Peliculas</a>
+            <a href="/views/P&S.html/peliculas.html">Películas</a>
         </button>
         <button class="redireccion">
             <a href="/views/P&S.html/series.html">Series</a>
