feature: "Slider home"

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,25 @@
     <title>Red Plus Pelis</title>
 </head>
 <body>
-    
+        <section class="slider">
+        <div class="slider-container">
+            <div class="slider-item">
+                <img src="../public/contenido/img/Peliculas/BadBoysForLife.jpg" alt="Imagen 2">
+            </div>
+            <div class="slider-item">
+                <img src="../Public/contenido/img/Peliculas/Baywatch.jpg" alt="Imagen 3">
+            </div>
+            <div class="slider-item">
+                <img src="../public/contenido/img/Peliculas/RushHour3.jpg" alt="Imagen 3">
+            </div>
+
+            <div class="slider-item">
+                <img src="../Public/contenido/img/Peliculas/Ted.jpg" alt="Imagen 4">
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
+
+<script src="../Public/js/style.js"></script>
