--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,201 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Public/css/style.css">
-    <title>Red Plus Pelis</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../Public/css/style.css"/>
+        <title>start voyage</title>
+    </head>
+    <body>
+        <header>
+            <nav class="principalNav">
+                <ul class="menu">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="peliculas.html">Películas</a></li>
+                    <li><a href="series.html">Series</a></li>
+                    <li>
+                        <a href="#">Géneros</a>
+                        <ul class="submenu">
+                            <li><a href="#">Animación</a></li>
+                            <li><a href="#">Comedia</a></li>
+                            <li><a href="#">Drama</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+
+            <input id="buscador" type="text" placeholder="Buscar" />
+            <img
+                id="loupe"
+                src="../Public/contenido/img/Logos/loupe.png"
+                alt="loupe"
+            />
+
+            <figure>
+                <img
+                    id="logo"
+                    src="../Public/contenido/img/Logos/logoEmpresa.png"
+                    alt="logo"
+                />
+            </figure>
+        </header>
+        <section class="slider">
+            <div class="slider-container">
+                <div class="slider-item">
+                    <img
+                        src="../public/contenido/img/Peliculas/BadBoysForLife.jpg"
+                        alt="Imagen 2"
+                    />
+                </div>
+                <div class="slider-item">
+                    <img
+                        src="../Public/contenido/img/Peliculas/Baywatch.jpg"
+                        alt="Imagen 3"
+                    />
+                </div>
+                <div class="slider-item">
+                    <img
+                        src="../public/contenido/img/Peliculas/RushHour3.jpg"
+                        alt="Imagen 3"
+                    />
+                </div>
+
+                <div class="slider-item">
+                    <img
+                        src="../Public/contenido/img/Peliculas/Ted.jpg"
+                        alt="Imagen 4"
+                    />
+                </div>
+            </div>
+        </section>
+        <div class="container">
+            <div class="scroll-images">
+                <section class="genero">
+                    <div class="btnFlecha flechaIzquierda">
+                        <button
+                            class="iconob flechabtn"
+                            onclick="scrollIzquierda()"
+                        >
+                            <img
+                                class="iconoi"
+                                src="../Public/contenido/img/Main/flechaIzquierda.png"
+                                alt=""
+                            />
+                        </button>
+                    </div>
+                    <div class="pelis" id="imageDramaContainer">
+                        <figure class="imageDrama">
+                            <img
+                                src="../Public/contenido/img/Peliculas/RushHour3.jpg"
+                                alt=""
+                            />
+                            <div class="trans">
+                                <h3>Una Pareja Explosiva</h3>
+                                <p> El este y el oeste se encuentran nuevamente cuando el asesinato del embajador Ha provoca la reunión de Lee y Carter.
+                                </p>
+                                <div class="botones">
+                                    <button class="ver">Ver</button>
+                                    <button class="verTrailer">
+                                        Ver Trailer
+                                    </button>
+                                </div>
+                            </div>
+                        </figure>
+                        <figure class="imageDrama">
+                            <img
+                                src="../Public/contenido/img/Peliculas/Ted.jpg"
+                                alt=""
+                            />
+                            <div class="trans">
+                                <h3>Ted</h3>
+                                <p> Cuando John Bennett era un niño pequeño, pidió el deseo de que Ted, su querido oso de peluche, cobrara vida.
+                                </p>
+                                <div class="botones">
+                                    <button class="ver">Ver</button>
+                                    <button class="verTrailer">
+                                        Ver Trailer
+                                    </button>
+                                </div>
+                            </div>
+                        </figure>
+                        <figure class="imageDrama">
+                            <img
+                                src="../Public/contenido/img/Peliculas/Baywatch.jpg"
+                                alt=""
+                            />
+                            <div class="trans">
+                                <h3>Guardianes de la Bahia</h3>
+                                <p> Dos socorristas, el veterano Mitch Buchannon y el joven y arrogante Matt Brody, deben detener a unos criminales que amenazan el futuro de la bahía en la que trabajan. Mientras colaboran aprenderán a respetarse mutuamente, dado que el comienzo de su relación profesional ha sido complicado
+                                </p>
+                                <div class="botones">
+                                    <button class="ver">Ver</button>
+                                    <button class="verTrailer">
+                                        Ver Trailer
+                                    </button>
+                                </div>
+                            </div>
+                        </figure>
+                        <figure class="imageDrama">
+                            <img
+                                src="../Public/contenido/img/Peliculas/BadBoysForLife.jpg"
+                                alt=""
+                            />
+                            <div class="trans">
+                                <h3>Bad Boys Para Siempre</h3>
+                                <p> Los veteranos agentes Mike Lowery y Marcus Burnett vuelven a colaborar para detener a Armando Armas, el violento líder de un cartel de la droga afincado en Miami. En esta ocasión, los apoya el equipo AMMO, un grupo de élite del Departamento de Policía de Miami.
+                                </p>
+                                <div class="botones">
+                                    <button class="ver">Ver</button>
+                                    <button class="verTrailer">
+                                        Ver Trailer
+                                    </button>
+                                </div>
+                            </div>
+                        </figure>
+                        <figure class="imageDrama">
+                            <img
+                                src="../Public/contenido/img/Peliculas/RideAlong.jpg"
+                                alt=""
+                            />
+                            <div class="trans">
+                                <h3>Ride Along</h3>
+                                <p> Cuando un policía veterano pone a prueba a su futuro cuñado, un recluta dispuesto a demostrar que es más que un adicto a los videojuegos, ambos deben enfrentar al criminal más peligroso de Atlanta.
+                                </p>
+                                <div class="botones">
+                                    <button class="ver">Ver</button>
+                                    <button class="verTrailer">
+                                        Ver Trailer
+                                    </button>
+                                </div>
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="btnFlecha flechaDerecha">
+                        <button
+                            class="iconob flechabtn"
+                            onclick="scrollDerecha()"
+                        >
+                            <img
+                                class="iconoi"
+                                src="../Public/contenido/img/Main/fechaDerecha.png"
+                                alt=""
+                            />
+                        </button>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <article>
+                <p>&copy CODE_DRAGON</p>
+            </article>
+            <figure class="redes">
+                <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
+                <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
+                <img class="red" src="/Public/contenido/img/Logos/twitter.png" alt="twitter">
+            </figure>
+        </footer>
+    </body>
 </html>
+<script src="../Public/js/style.js"></script>
+<script src="../Public/js/scroll.js"></script>
