--- a/views/peliculas.html
+++ b/views/peliculas.html
@@ -24,7 +24,8 @@
                 </ul>
             </nav>
 
-            <input id="buscador" type="text" placeholder="Buscar" />
+            <input id="buscador" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()" />
+
             <img
                 id="loupe"
                 src="../Public/contenido/img/Logos/loupe.png"
@@ -408,6 +409,16 @@
                 </section>
             </div>
         </div>
+
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="cerrarModal()">&times;</span>
+                <div id="modalContent" class="modal-columns"></div>
+            </div>
+        </div>
+        
+        
+
         <footer>
             <article>
                 <p>&copy CODE_DRAGON</p>
@@ -421,3 +432,4 @@
     </body>
 </html>
 <script src="../Public/js/scroll.js"></script>
+<script src="../Public/js/buscador.js"></script>
